typescript/checker/tests/conformance/classes/classExpressions/extendClassExpressionFromModule.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            139,
        ),
        hi: BytePos(
            143,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/classes/classExpressions/extendClassExpressionFromModule.ts:9:9
  |
9 | var x = foo1;
  |         ^^^^

